# -Enterprise-AI-Knowledge-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  dependencies.py  main.py  streamlit_app.py
app/api/: auth.py  documents.py  feedback.py  history.py  query.py
app/chains/: __init__.py  qa_chain.py
app/chatbot/: __init__.py  multi_turn.py
app/core/: exception.py  logger.py  security.py
app/db/: crud.py  database.py  feedback_store.py  models.py
app/rag/: chain.py  evaluation.py  ingestion.py  retriever.py
app/schemas/: auth.py  document.py  feedback.py  health.py  history.py  query.py
frontend/: streamlit_app.py
scripts/: __init__.py  ask_pdf.py  chat_cli.py  evaluate.py  run_chain.py  test_openai.py
tests/: conftest.py  test_config.py  test_ingestion.py  test_qa_chain.py
