[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-knowledge-assistant"
version = "0.1.0"
description = "Enterprise AI Knowledge Assistant — RAG document Q&A"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["rag", "langchain", "openai", "knowledge-base", "fastapi"]

dependencies = [
    # Web / API
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic",
    "streamlit",
    
    # Config
    "python-dotenv",
    
    # Auth
    "pyjwt",
    "pwdlib[argon2]",
    
    # Database
    "sqlalchemy",
    "psycopg[binary]",
    
    # RAG stack
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langchain-community",
    "langchain-chroma",
    "langchain-text-splitters",
    "chromadb",
    "pypdf",
    "openai",
    
    # Evaluation
    "ragas>=0.2,<0.3"
    ]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
